Bug 196684 - command variable "%t" does nothing
Summary: command variable "%t" does nothing
Status: RESOLVED FIXED
Alias: None
Product: kmouth
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gunnar Schmidt
URL:
Keywords:
: 218863 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-15 23:36 UTC by Harald Sitter
Modified: 2010-11-17 04:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2009-06-15 23:36:53 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

This bug was reported at: https://bugs.launchpad.net/ubuntu/+source/kdeaccessibility/+bug/380148

In KDE 3, command for proprietary speechsynthesizer app:
 "echo %t | iconv -f UTF-8 -t ISO-8859-1 -> /tmp/mikropuhe"
 works just fine, although in 9.04 installation same command does nothing.
When i enter "echo test > /tmp/mikropuhe" in terminal, it works. Also command in kmouth preferences speaks "test" if i use same command there.
So seems to me, that variable "%t" isn't working on kde4 build of kmouth.

If trying to echo to a file it doesn't echo any text either.
Comment 1 Christoph Feck 2010-11-17 04:28:00 UTC
SVN commit 1197933 by cfeck:

Fix text not passed to external speech command

FIXED-IN: 4.6.0
BUG: 196684


 M  +2 -1      speech.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197933
Comment 2 Christoph Feck 2010-11-17 04:38:33 UTC
*** Bug 218863 has been marked as a duplicate of this bug. ***