Fix text not passed to external speech command

FIXED-IN: 4.6.0
BUG: 196684

svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=1197933